# naive-auth

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  package-lock.json
backend/: .env  .gitignore  Cargo.toml
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/macros/src/code/: flatten_enum.rs  mod.rs
backend/migrations/: 20250811214354_initial.up.sql  20250812073240_edit_user_model.down.sql  20250812073240_edit_user_model.up.sql  20250812222543_email_is_not_nullable.down.sql  20250812222543_email_is_not_nullable.up.sql  20250814071725_user_table_twofactor.down.sql  20250815044456_oauth_impl.up.sql  20250819090409_simple_session_metadata.up.sql  20250819160954_user_sudo_like.down.sql  20250819160954_user_sudo_like.up.sql
backend/src/: global.rs
backend/src/auth/: mod.rs  ticket.rs
backend/src/auth/oauth/: middleware.rs  mod.rs  scopes.rs
backend/src/database/: mod.rs  ulid.rs
backend/src/database/models/: session.rs
backend/src/database/models/oauth/: mod.rs
backend/src/email/: mod.rs
backend/src/email/html/: email_verified.html  new_login.html  oauth_app_authorized.html  otp.html  totp_disabled.html  totp_enabled.html  totp_recovery_viewed.html  verify_email.html
backend/src/http/: error.rs  mod.rs
backend/src/http/v1/: mod.rs  oauth.rs  session.rs  sudo.rs  totp.rs
backend/src/http/v1/auth/: mod.rs  oauth.rs  otp.rs  password.rs  totp.rs
backend/src/http/validation/: json.rs  mod.rs  path.rs  query.rs
backend/src/settings/: cli.rs  mod.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/: bigHeader.svelte  button.svelte  input.svelte
frontend/src/lib/: bigHeader.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/signup/: +page.svelte
frontend/src/styles/: reset.scss  root.scss
migrations/: 20250811214354_initial.down.sql  20250812073240_edit_user_model.down.sql  20250814071725_user_table_twofactor.up.sql  20250815044456_oauth_impl.down.sql  20250819090409_simple_session_metadata.down.sql
src/: global.rs  main.rs  settings.rs
src/auth/: middleware.rs  mod.rs  ops.rs  ticket.rs
src/auth/oauth/: middleware.rs  mod.rs  ops.rs  scopes.rs
src/database/: mod.rs  string_id.rs  ulid.rs
src/database/models/: mod.rs  session.rs  user.rs
src/database/models/oauth/: authorized.rs  mod.rs
src/database/redis/: mod.rs
src/database/redis/models/: auth.rs  mod.rs  oauth.rs
src/email/: mod.rs  resources.rs
src/email/html/: password_reset.html  totp_recovery_used.html
src/http/: error.rs  mod.rs
src/http/v1/: mod.rs  models.rs  oauth.rs  session.rs  sudo.rs  totp.rs
src/http/v1/auth/: mod.rs  oauth.rs  otp.rs  password.rs  totp.rs
src/http/v1/models/: auth.rs
src/settings/: cli.rs  mod.rs
