[package]
name = "beepauth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.13"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "=0.6.4" # god dammit argon2. make that breaking release for once.
rand_chacha = "=0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
smart-default = "0.7.1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "migrate",
    "uuid",
    "chrono",
] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.13"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "tracing",
] }
toml = "0.9.5"
tower = "0.5.2"
tower-cookies = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = { version = "1.2.1", features = ["uuid"] }
uuid = { version = "1.18.0", features = ["v4"] }
