[package]
name = "beepauth"
authors = ["moonbeeper <moonbeeper@duck.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
any_ascii = "0.3.3"
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-valid = "0.24.0"
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
config = "0.15.14"
either = "1.15.0"
fred = { version = "10.1.0", features = ["serde_json"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.18", features = ["tokio1-native-tls"] }
rand = "=0.6.4" # god dammit argon2. make that breaking release for once.
rand_chacha = "=0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
smart-default = "0.7.1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "migrate",
    "uuid",
    "chrono",
] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.13"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "tracing",
] }
toml = "0.9.5"
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typed-builder = "0.21.1"
ulid = { version = "1.2.1", features = ["serde", "uuid"] }
uuid = { version = "1.18.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
